--- a/src/web/client/styles/layout/_variables.scss
+++ b/src/web/client/styles/layout/_variables.scss
@@ -487,7 +487,7 @@ $pager-disabled-color:                 $gray-light !default;
 
 $jumbotron-padding:              30px !default;
 $jumbotron-color:                inherit !default;
-$jumbotron-bg:                   #fafafa !default;
+$jumbotron-bg:                   #99AAB5 !default;
 $jumbotron-heading-color:        inherit !default;
 $jumbotron-font-size:            ceil(($font-size-base * 1.5)) !default;
 $jumbotron-heading-font-size:    ceil(($font-size-base * 4.5)) !default;
