--- a/src/web/client/styles/layout/_variables.scss
+++ b/src/web/client/styles/layout/_variables.scss
@@ -15,7 +15,7 @@ $gray:                   #6f6f6f !default; // #555
 $gray-light:             lighten($gray-base, 60%) !default;   // #999
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
-$brand-primary:         #008cba !default;
+$brand-primary:         #7289DA !default;
 $brand-success:         #43ac6a !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #E99002 !default;
@@ -27,9 +27,9 @@ $brand-danger:          #F04124 !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #2C2F33 !default;
+$body-bg:               #FFFFFF !default;
 //** Global text color on `<body>`.
-$text-color:            #FFFFFF !default;
+$text-color:            #2C2F33 !default;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
@@ -372,9 +372,9 @@ $navbar-default-border:            darken($navbar-default-bg, 6.5%) !default;
 // Navbar links
 $navbar-default-link-color:                #fff !default;
 $navbar-default-link-hover-color:          #fff !default;
-$navbar-default-link-hover-bg:             #272727 !default;
+$navbar-default-link-hover-bg:             #2C2F33 !default;
 $navbar-default-link-active-color:         #fff !default;
-$navbar-default-link-active-bg:            #272727 !default;
+$navbar-default-link-active-bg:            #2C2F33 !default;
 $navbar-default-link-disabled-color:       #ccc !default;
 $navbar-default-link-disabled-bg:          transparent !default;
 
@@ -487,7 +487,7 @@ $pager-disabled-color:                 $gray-light !default;
 
 $jumbotron-padding:              30px !default;
 $jumbotron-color:                inherit !default;
-$jumbotron-bg:                   #99AAB5 !default;
+$jumbotron-bg:                   #2C2F33 !default;
 $jumbotron-heading-color:        inherit !default;
 $jumbotron-font-size:            ceil(($font-size-base * 1.5)) !default;
 $jumbotron-heading-font-size:    ceil(($font-size-base * 4.5)) !default;
