--- a/src/web/client/pages/home/_home.scss
+++ b/src/web/client/pages/home/_home.scss
@@ -1,3 +1,14 @@
 .img-pat {
     max-width: 10em;
+    margin-bottom: 1em;
+}
+
+.btn {
+    margin-bottom: 1em;
+}
+
+@media (max-width: 767px) {
+    .btn {
+        font-size: 0.9em;
+    }
 }
